Bug 565500 - Change uses of new Integer(int) in NewManualServerComposite to Integer.valueOf(int)
Change-Id: Ie672b57bd0096c2df2048fa228f85fbc5635745f